hphp/hack/test/typecheck/coeffects/cipp.php.exp
File "cipp.php", line 6, characters 3-24:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 5, characters 25-32:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicy, ReadGlobals, WriteProperty}
  File "cipp.php", line 12, characters 33-48:
  But the function being called requires the capability set {IO, ImplicitPolicyShallow, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 7, characters 3-22:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 5, characters 25-32:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicy, ReadGlobals, WriteProperty}
  File "cipp.php", line 19, characters 31-44:
  But the function being called requires the capability set {IO, ImplicitPolicyLocal, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 8, characters 3-19:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 5, characters 25-32:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicy, ReadGlobals, WriteProperty}
  File "cipp.php", line 27, characters 28-41:
  But the function being called requires the capability set {IO, ImplicitPolicyOf<A>, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 9, characters 3-12:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 5, characters 25-32:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicy, ReadGlobals, WriteProperty}
  File "cipp.php", line 34, characters 10-17:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 15, characters 3-19:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 12, characters 33-48:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicyLocal, ReadGlobals, WriteProperty}
  File "cipp.php", line 27, characters 28-41:
  But the function being called requires the capability set {IO, ImplicitPolicyOf<A>, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 16, characters 3-12:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 12, characters 33-48:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicyLocal, ReadGlobals, WriteProperty}
  File "cipp.php", line 34, characters 10-17:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 23, characters 3-19:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 19, characters 31-44:
  From this declaration, the context of this function body provides the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "cipp.php", line 27, characters 28-41:
  But the function being called requires the capability set {IO, ImplicitPolicyOf<A>, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 29, characters 3-24:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 27, characters 28-41:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicyOf<A>, ReadGlobals, WriteProperty}
  File "cipp.php", line 12, characters 33-48:
  But the function being called requires the capability set {IO, ImplicitPolicyShallow, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 30, characters 3-22:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 27, characters 28-41:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicyOf<A>, ReadGlobals, WriteProperty}
  File "cipp.php", line 19, characters 31-44:
  But the function being called requires the capability set {IO, ImplicitPolicyLocal, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 31, characters 3-12:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 27, characters 28-41:
  From this declaration, the context of this function body provides the capability set {IO, ImplicitPolicyOf<A>, ReadGlobals, WriteProperty}
  File "cipp.php", line 34, characters 10-17:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "cipp.php", line 39, characters 3-19:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "cipp.php", line 34, characters 10-17:
  From this declaration, the context of this function body provides the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "cipp.php", line 27, characters 28-41:
  But the function being called requires the capability set {IO, ImplicitPolicyOf<A>, ReadGlobals, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
